# meme_video_generator

./: .env.example  .gitignore  Makefile  README.md
.claude-plugin/: marketplace.json
kb/: README.md  pyproject.toml
kb/src/kb/: __init__.py  cli.py  config.py  constants.py  giphy.py  tts.py
kb/src/kb/commands/: __init__.py  _helpers.py  delete.py  giphy.py  ingest.py  list_entries.py  query.py  stats.py  tts.py
kb/src/kb/embeddings/: __init__.py  fake_embedder.py  local_embedder.py  protocol.py
kb/src/kb/ingestors/: __init__.py  base.py  imgflip.py  local_files.py  myinstants.py
kb/src/kb/models/: __init__.py  sound.py  template.py
kb/src/kb/store/: __init__.py  chroma_client.py  repository.py
kb/tests/: conftest.py
kb/tests/e2e/: test_cli.py  test_cli_giphy.py  test_cli_scrapers.py  test_cli_tts.py
kb/tests/fixtures/: imgflip_memetemplates.html  myinstants_search.html
kb/tests/integration/: test_giphy_client.py  test_imgflip_ingestor.py  test_local_ingestor.py  test_myinstants_ingestor.py  test_repository.py  test_stage_assets.py
kb/tests/unit/: test_config.py  test_local_embedder.py  test_models.py  test_tts.py
plugins/meme-video/.claude-plugin/: plugin.json
plugins/meme-video/skills/meme-video/: SKILL.md
scripts/: synth_obs_vo.sh
video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json  vitest.config.ts
video/src/: Root.tsx
video/src/compositions/: index.ts
video/src/compositions/example-observability/: index.tsx
video/src/compositions/example-observability/scenes/: Scene01Title.tsx  Scene02Problem.tsx  Scene03DrakeReject.tsx  Scene04DrakeApprove.tsx  Scene05Architecture.tsx  Scene06Annotation.tsx  Scene06GrafanaTour.tsx  Scene06bTraceView.tsx  Scene07MultiLang.tsx  (+1 more)
video/src/lib/primitives/: AnimatedArrow.tsx  CodeBlock.tsx  ScreenMockup.tsx  SpringIn.tsx  StaggerGroup.tsx  Typewriter.tsx  index.ts
video/tests/fixtures/: minimal-spec.json
video/tests/lib/primitives/: primitives.test.tsx
