[project]
name = "kb"
version = "0.1.0"
description = "Knowledge base CLI for meme sounds and templates. Backed by ChromaDB + sentence-transformers."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Håvard Stavnås Markhus", email = "haavard.stavnas.markhus@gmail.com" }
]
dependencies = [
    "chromadb>=0.5,<1.0",
    "sentence-transformers>=3.0,<4.0",
    "typer>=0.12,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
    "python-dotenv>=1.0,<2.0",
    "mutagen>=1.47,<2.0",
    "pillow>=10.0,<12.0",
    "beautifulsoup4>=4.12,<5.0",
    "edge-tts>=7.0,<8.0",
]

[project.scripts]
kb = "kb.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-mock>=3.12,<4.0",
    "respx>=0.21,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "bandit>=1.7,<2.0",
    "types-beautifulsoup4",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests hitting real (ephemeral) ChromaDB or filesystem",
    "e2e: slow end-to-end CLI tests",
    "network: tests requiring outbound network (skipped by default)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/kb"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line-length enforced by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["kb"]
